fix: overflowing content on events calendar page

--- a/src/App.css
+++ b/src/App.css
@@ -175,7 +175,7 @@ table tr th {
 .position-sticky {
   position: sticky;
   top: 0;
-  z-index: 10000;
+  z-index: 1;
 }
 
 .events-col-1 {
